--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <i class="zmdi zmdi-email-open"></i>
                                     </div>
                                     <div class="content">
-                                        <p>You got a email notification</p>
+                                        <p>Hubo un aumento de visitas en: Brásil</p>
                                         <span class="date">Noviembre 11, 2019 20:54</span>
                                     </div>
                                 </div>
@@ -74,8 +74,8 @@
                                         <i class="zmdi zmdi-account-box"></i>
                                     </div>
                                     <div class="content">
-                                        <p>Your account has been blocked</p>
-                                        <span class="date">Noviembre 11, 2019 20:54</span>
+                                        <p>El tiempo de sesión ha disminuido el día de hoy</p>
+                                        <span class="date">Noviembre 11, 2019 19:32</span>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                 <i class="zmdi zmdi-email-open"></i>
                             </div>
                             <div class="content">
-                                <p>You got a email notification</p>
+                                <p>Hubo un aumento de visitas en: Brásil</p>
                                 <span class="date">Noviembre 11, 2019 20:54</span>
                             </div>
                         </div>
@@ -165,21 +165,9 @@
                                 <i class="zmdi zmdi-account-box"></i>
                             </div>
                             <div class="content">
-                                <p>Your account has been blocked</p>
+                                <p>El tiempo de sesión ha disminuido el día de hoy</p>
                                 <span class="date">Noviembre 11, 2019 20:54</span>
                             </div>
-                        </div>
-                        <div class="notifi__item">
-                            <div class="bg-c3 img-cir img-40">
-                                <i class="zmdi zmdi-file-text"></i>
-                            </div>
-                            <div class="content">
-                                <p>You got a new file</p>
-                                <span class="date">Noviembre 11, 2019 20:54</span>
-                            </div>
-                        </div>
-                        <div class="notifi__footer">
-                            <a href="#">All notifications</a>
                         </div>
                     </div>
                 </div>
@@ -235,7 +223,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4">
                             <div class="statistic__item statistic__item--red" style="border-radius: 10px;">
-                                <h2 class="number">18%</h2>
+                                <h2 class="number">60%</h2>
                                 <span class="desc">Porcentaje de rebote</span>
                                 <div class="icon">
                                     <i class="zmdi zmdi-scissors"></i>
@@ -244,7 +232,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4">
                             <div class="statistic__item statistic__item--blue" style="border-radius: 10px;">
-                                <h2 class="number">5 segundos</h2>
+                                <h2 class="number">150 segundos</h2>
                                 <span class="desc">Tiempo/Sesión</span>
                                 <div class="icon">
                                     <i class="zmdi zmdi-timer"></i>
@@ -260,11 +248,11 @@
             <section class="statistic-chart">
                 <div class="container">
 				<div class="row">
-					<div class="col-md-10 col-lg-8">
+					<div class="col-md-10 col-lg-8" >
 
-						<div class="map-data m-b-40">
+						<div class="map-data m-b-40 au-card m-b-10">
 							<h3 class="title-3 m-b-30">
-								<i class="zmdi zmdi-map"></i>map data</h3>
+								<i class="zmdi zmdi-map"></i>Visitas por país</h3>
 							<div class="map-wrap m-t-45 m-b-20">
 								<div id="vmap" style="height: 284px;"></div>
 							</div>
@@ -289,29 +277,29 @@
 									</div>
 								</div>
 								<div class="col-md-5 col-lg-6">
-										<h3 class="title-5 m-b-10">top campaigns</h3>
+										<h3 class="title-5 m-b-10">Top paises</h3>
 										<div class="table-responsive">
 										<table class="table table-top-campaign">
 										<tbody>
 										<tr>
-										<td>1. Australia</td>
-										<td>$70,261.65</td>
+										<td>1. Colombia</td>
+										<td>125.842</td>
 										</tr>
 										<tr>
-										<td>2. United Kingdom</td>
-										<td>$46,399.22</td>
+										<td>2. Venezuela</td>
+										<td>65.823</td>
 										</tr>
 										<tr>
-										<td>3. Turkey</td>
-										<td>$35,364.90</td>
+										<td>3. Ecuador</td>
+										<td>45.923</td>
 										</tr>
 										<tr>
-										<td>4. Germany</td>
-										<td>$20,366.96</td>
+										<td>4. Perú</td>
+										<td>31.942</td>
 										</tr>
 										<tr>
-										<td>5. France</td>
-										<td>$10,366.96</td>
+										<td>5. Panamá</td>
+										<td>10.584</td>
 										</tr>
 										</tbody>
 										</table>
@@ -353,16 +341,16 @@
 						<div class="col-lg-6">
 								<div class="au-card m-b-30">
 								<div class="au-card-inner"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-								<h3 class="title-2 m-b-40">Bar chart</h3>
-								<canvas id="barChart" class="chartjs-render-monitor" "></canvas>
+								<h3 class="title-2 m-b-40">Porcentaje agendamiento por genero</h3>
+								<canvas id="genero" class="chartjs-render-monitor" "></canvas>
 								</div>
 								</div>
 						</div>
 						<div class="col-lg-6">
 								<div class="au-card m-b-30">
 								<div class="au-card-inner"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-								<h3 class="title-2 m-b-40">Bar chart</h3>
-								<canvas id="singelBarChart"  class="chartjs-render-monitor" "></canvas>
+								<h3 class="title-2 m-b-40">Tráfico por días</h3>
+								<canvas id="diashoras" class="chartjs-render-monitor" "></canvas>
 								</div>
 								</div>
 						</div>
