--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="copyright">
-                                <p>Copyright © 2018 Colorlib. All rights reserved. Template by <a href="https://colorlib.com">Colorlib</a>.</p>
+                                <p>Realizado por: Melisa Patarroyo, Fabián Bohorquez, Jorge Parra. Plantilla <a href="https://colorlib.com">Colorlib</a> Copyright © 2018.</p>
                             </div>
                         </div>
                     </div>
